--- a/docs/developer/getting-started/quickstart.mdx
+++ b/docs/developer/getting-started/quickstart.mdx
@@ -16,7 +16,7 @@ description: 'Start building awesome e-commerce applications with Spree'
 
 Welcome to the Spree Commerce documentation guide. Follow the instructions below to learn how to build and deploy your Spree Commerce store.
 
-### 1. Deploying Your Docs Repository
+### 1. Installing Spree
 
 Spree Commerce are rendered from MDX files and configurations defined in our [starter template](https://github.com/mintlify/starter). We use Github to integrate your docs with your code, and make source control effortless.
 
