--- a/docs/developer/extensions/extensions.mdx
+++ b/docs/developer/extensions/extensions.mdx
@@ -1,206 +1,195 @@
 ---
+title: 3rd Party Extensions
 description: >-
   Extensions provide additional features and integrations for your Spree
-  application
+  application. Here's a list of the most popular ones.
 ---
-
-# Extensions
-
-## Authentication
-
-### [Devise](https://github.com/spree/spree_auth_devise)
-
-Provides authentication services for Spree, using the Devise gem such as signup, login, reset password, account confirmation and more.
-
-## Content Management
-
-### [Blogs](https://github.com/MatthewKennedy/spree_blogs)
-
-Move your existing Shopify blogs over to Spree bringing all your blog posts and URL's with you
-
-## Customer Service
-
-### [Gladly](https://github.com/upsidelab/spree_gladly)
-
-Allows you to connect your Spree store with [Gladly](https://www.gladly.com/) service. It allows Gladly agents to see basic information about Spree customers and their orders.
-
-## Internationalization
-
-### [Globalize](https://github.com/spree-contrib/spree_globalize)
-
-Adds support for model translations \(multi-language stores\)
-
-### [Flow Commerce](https://github.com/mejuri-inc/flowcommerce_spree)
-
-Integration with Flow Commerce API for cross border selling
-
-## Order Management
-
-### [Handling Fees](https://github.com/spree-contrib/spree_handling_fees)
-
-Adds Handling Fee functionality to Spree.
-
-### [Order Comments](https://github.com/spree-contrib/spree_comments)
-
-Add commenting to orders / shipments / etc ...
-
-### [Print Invoice](https://github.com/spree-contrib/spree_print_invoice)
-
-Create a PDF invoice for Spree orders.
-
-### [HTML Invoice](https://github.com/TruemarkDev/spree-html-invoice)
-
-Provides a "Print Invoice" button on the Admin Orders view which opens a printable HTML page with the order details
-
-## Marketing
-
-### [Analytics Trackers](https://github.com/spree-contrib/spree_analytics_trackers)
-
-Adds support for Analytics Trackers \(Google Analytics & Segment\)
-
-### [Affiliates](https://github.com/spree-contrib/spree_affiliate)
-
-Affiliate support for Spree Commerce.
-
-### [MailChimp E-Commerce](https://github.com/spree-contrib/spree_mailchimp_ecommerce)
-
-Full Spree Mailchimp E-Commerce integration
-
-### [Product Feed](https://github.com/MatthewKennedy/spree_product_feed)
-
-Connect your Spree store directly to Google Merchant Center and Facebook Catalog via a live RSS feed
-
-### [Sitemap](https://github.com/spree-contrib/spree_sitemap)
-
-Sitemap Generator for Spree Commerce.
-
-### [Virtual Gift Card](https://github.com/ShopFelixGray/spree_virtual_gift_card)
-
-A virtual gift card solution
-
-## Marketplace & Multi-tenancy
-
-### [Mirakl](https://github.com/ShopFelixGray/spree_mirakl_api)
-
-Spree integration for Mirakl API
-
-### [Multi Vendor](https://github.com/spree-contrib/spree_multi_vendor)
-
-Official marketplace extension
-
-### [Apartment](https://github.com/spree-contrib/spree_shared)
-
-Multi-tenancy for Spree using Apartment \(per tenant databases\).
-
-## Payments
-
-### [Adyen](https://github.com/spree-contrib/spree-adyen)
-
-Adyen payment gateway integration for Spree.
-
-### [Affirm](https://github.com/Affirm/spree_affirm)
-
-Affirm payment method
-
-### [Amazon Pay](https://github.com/ShopFelixGray/spree_pay_with_amazon)
-
-Add Pay with Amazon to your Spree Commerce solution
-
-### [Gateway](https://github.com/spree/spree_gateway)
-
-Officially supported payment gateways such as Stripe, Apple Pay, Authorize.net and over 20 more
-
-### [Braintree vzero](https://github.com/spree-contrib/spree_braintree_vzero)
-
-Official Spree Braintree + PayPal extension
-
-### [Mollie](https://github.com/mollie/spree-mollie-gateway)
-
-official Mollie payment gateway for Spree Commerce. Accept all major payment methods, including iDEAL, Bancontact, Visa, Mastercard, AmEx, and many more
-
-### [PayPal Express](https://github.com/spree-contrib/better_spree_paypal_express)
-
-A better Spree PayPal Express Extension.
-
-### [Stripe Terminal](https://github.com/ShopFelixGray/spree_stripe_terminal)
-
-Allows you to process payments with the stripe terminal via the backend of spree.
-
-## Products
-
-### [Digital Products](https://github.com/spree-contrib/spree_digital)
-
-A Spree extension to enable downloadable products
-
-### [Videos](https://github.com/spree-contrib/spree_videos)
-
-Allows linking of youtube reference IDs to products
-
-### [Volume Pricing](https://github.com/spree-contrib/spree_volume_pricing)
-
-Spree extension which supports sales volume-based pricing \(quantity discounts\).
-
-### [Products Q&A](https://github.com/TruemarkDev/spree_products_qa)
-
-Q&A Sections for products. Logged in users can ask a question, and then admins are able to answer it. All answered \(and accepted\) questions are displayed on a product page
-
-## Search
-
-### [SearchKick](https://github.com/spree-contrib/spree_searchkick)
-
-Adds Elasticsearch integration to Spree, powered by [searchkick](https://github.com/ankane/searchkick) gem enabling full-text searching and advanced product filtering
-
-## Shipping
-
-### [Active Shipping](https://github.com/spree-contrib/spree_active_shipping)
-
-Integration with USPS, FedEx, Canada Post and others
-
-### [EasyPost](https://github.com/ShopFelixGray/spree_easypost)
-
-This is an extension to integrate Easy Post into Spree
-
-### [ShipStation](https://github.com/MatthewKennedy/spree_shipstation)
-
-Connect your Spree store with ShipStation, allowing ShipStation to pull shipments from your store, and when a shipment is sent, update the order with a tracking number and mark it as shipped
-
-## Social
-
-### [Social Login](https://github.com/spree-contrib/spree_social)
-
-Login or signup via Facebook, Twitter, Amazon and other
-
-### [Reviews](https://github.com/spree-contrib/spree_reviews)
-
-Straightforward review/rating functionality.
-
-## Tax Calculation
-
-### [Avatax](https://github.com/spree-contrib/spree_avatax_official)
-
-The new officially certified Spree Avatax \(Avalara\) extension
-
-### [TaxCloud](https://github.com/spree-contrib/spree_tax_cloud)
-
-US sales tax extension for Spree using the Tax Cloud service.
-
-### [TaxJar](https://github.com/spree-contrib/spree_taxjar)
-
-Spree Taxjar is a US sales tax extension for Spree using the Taxjar service
-
-## Upselling
-
-### [Product Assembly](https://github.com/spree-contrib/spree-product-assembly)
-
-Adds the ability to make product bundles
-
-### [Related Products](https://github.com/spree-contrib/spree_related_products)
-
-Possible uses: Accessories, Cross Sells, Up Sells, Compatible Products, Replacement Products, Warranty & Support Products
-
-### [Wishlists](https://github.com/spree-contrib/spree_wishlist)
-
-Wishlist extension for Spree Commerce.
-
-
-
+<AccordionGroup>
+  <Accordion title="Content Management">
+    <Card
+      title="Blogs"
+      href="https://github.com/MatthewKennedy/spree_blogs"
+    >
+      Move your existing Shopify blogs over to Spree bringing all your blog posts and URL's with you.
+    </Card>
+  </Accordion>
+
+  <Accordion title="Customer Service">
+    <Card
+      title="Gladly"
+      href="https://github.com/upsidelab/spree_gladly"
+    >
+      Allows you to connect your Spree store with [Gladly](https://www.gladly.com/) service. It allows Gladly agents to see basic information about Spree customers and their orders.
+    </Card>
+  </Accordion>
+
+  <Accordion title="Internationalization">
+    <Card
+      title="Flow Commerce"
+      href="https://github.com/mejuri-inc/flowcommerce_spree"
+    >
+      Integration with Flow Commerce API for cross border selling.
+    </Card>
+  </Accordion>
+  <Accordion title="Order Management">
+    <Card
+      title="Print Invoice"
+      href="https://github.com/spree-contrib/spree_print_invoice"
+    >
+      Create a PDF invoice for Spree orders.
+    </Card>
+  </Accordion>
+
+  <Accordion title="Marketing">
+    <Card
+      title="Analytics Trackers"
+      href="https://github.com/spree-contrib/spree_analytics_trackers"
+    >
+      Adds support for Analytics Trackers \(Google Analytics & Segment\).
+    </Card>
+    <Card
+      title="MailChimp E-Commerce"
+      href="https://github.com/spree-contrib/spree_mailchimp_ecommerce"
+    >
+      Full Spree Mailchimp E-Commerce integration.
+    </Card>
+    <Card
+      title="Virtual Gift Card"
+      href="https://github.com/ShopFelixGray/spree_virtual_gift_card"
+    >
+      A virtual gift card solution.
+    </Card>
+  </Accordion>
+
+  <Accordion title="Marketplaces">
+    <Card
+      title="Multi Vendor"
+      href="https://github.com/spree-contrib/spree_multi_vendor"
+    >
+      Official marketplace extension. Build your own multi-vendor marketplace in no time.
+    </Card>
+    <Card
+      title="Mirakl"
+      href="https://github.com/ShopFelixGray/spree_mirakl_api"
+    >
+      Spree integration for Mirakl API.
+    </Card>
+  </Accordion>
+
+  <Accordion title="Payments">
+    <Card
+      title="Affirm"
+      href="https://github.com/Affirm/spree_affirm"
+    >
+      Affirm payment method.
+    </Card>
+    <Card
+      title="Amazon Pay"
+      href="https://github.com/ShopFelixGray/spree_pay_with_amazon"
+    >
+      Add Pay with Amazon to your Spree Commerce solution.
+    </Card>
+    <Card
+      title="Braintree vzero"
+      href="https://github.com/spree-contrib/spree_braintree_vzero"
+    >
+      Official Spree Braintree + PayPal extension.
+    </Card>
+    <Card
+      title="Mollie"
+      href="https://github.com/mollie/spree-mollie-gateway"
+    >
+      official Mollie payment gateway for Spree Commerce. Accept all major payment methods, including iDEAL, Bancontact, Visa, Mastercard, AmEx, and many more.
+    </Card>
+    <Card
+      title="Stripe Terminal"
+      href="https://github.com/ShopFelixGray/spree_stripe_terminal"
+    >
+      Allows you to process payments with the stripe terminal via the backend of spree.
+    </Card>
+  </Accordion>
+
+  <Accordion title="Products">
+    <Card
+      title="Volume Pricing"
+      href="https://github.com/spree-contrib/spree_volume_pricing"
+    >
+      Spree extension which supports sales volume-based pricing \(quantity discounts\).
+    </Card>
+    <Card
+      title="Products Q&A"
+      href="https://github.com/TruemarkDev/spree_products_qa"
+    >
+      Q&A Sections for products. Logged in users can ask a question, and then admins are able to answer it. All answered \(and accepted\) questions are displayed on a product page.
+    </Card>
+  </Accordion>
+
+  <Accordion title="Search">
+    <Card
+      title="SearchKick"
+      href="https://github.com/spree-contrib/spree_searchkick"
+    >
+      Adds Elasticsearch integration to Spree, powered by [searchkick](https://github.com/ankane/searchkick) gem enabling full-text searching and advanced product filtering.
+    </Card>
+  </Accordion>
+
+  <Accordion title="Shipping">
+    <Card
+      title="EasyPost"
+      href="https://github.com/ShopFelixGray/spree_easypost"
+    >
+      This is an extension to integrate Easy Post into Spree.
+    </Card>
+    <Card
+      title="ShipStation"
+      href="https://github.com/MatthewKennedy/spree_shipstation"
+    >
+      Connect your Spree store with ShipStation, allowing ShipStation to pull shipments from your store, and when a shipment is sent, update the order with a tracking number and mark it as shipped.
+    </Card>
+  </Accordion>
+
+  <Accordion title="Social">
+    <Card
+      title="Social Login"
+      href="https://github.com/spree-contrib/spree_social"
+    >
+      Login or signup via Facebook, Twitter, Amazon and other.
+    </Card>
+    <Card
+      title="Reviews"
+      href="https://github.com/spree-contrib/spree_reviews"
+    >
+      Straightforward review/rating functionality.
+    </Card>
+  </Accordion>
+
+  <Accordion title="Tax Calculation">
+    <Card
+      title="Avatax"
+      href="https://github.com/spree-contrib/spree_avatax_official"
+    >
+      The new officially certified Spree Avatax \(Avalara\) extension.
+    </Card>
+    <Card
+      title="TaxJar"
+      href="https://github.com/spree-contrib/spree_taxjar"
+    >
+      Spree Taxjar is a US sales tax extension for Spree using the Taxjar service.
+    </Card>
+  </Accordion>
+
+  <Accordion title="Upselling">
+    <Card
+      title="Product Assembly"
+      href="https://github.com/spree-contrib/spree-product-assembly"
+    >
+      Adds the ability to make product bundles.
+    </Card>
+    <Card
+      title="Related Products"
+      href="https://github.com/spree-contrib/spree_related_products"
+    >
+      Possible uses: Accessories, Cross Sells, Up Sells, Compatible Products, Replacement Products, Warranty & Support Products.
+    </Card>
+  </Accordion>
+</AccordionGroup>
