--- a/docs/api-reference/introduction.mdx
+++ b/docs/api-reference/introduction.mdx
@@ -13,10 +13,6 @@ Currently Spree includes 2 APIs:
   </Card>
 </CardGroup>
 
-## Installation
-
-To use the APIs, install the `spree_api` gem with a version corresponding to your version of Spree. If you're using [spree\_starter](https://github.com/spree/spree\_starter) as a base for your project or you have the `spree` gem in your `Gemfile` the API will be included out of the box.
-
-## Legacy REST API v1
+### Legacy REST API v1
 
 Legacy REST API v1 was extracted to `spree_api_v1` gem. It is not recommended to use it in new projects, but it's still available for existing ones.
