--- a/docs/developer/core-concepts/architecture.mdx
+++ b/docs/developer/core-concepts/architecture.mdx
@@ -1,3 +1,8 @@
+---
+title: Architecture
+description: Learn about the architecture of Spree
+---
+
 Spree is built on top of [Ruby on Rails](https://rubyonrails.org) and handful of other Ruby libraries. Spree itself is a modular platform consisting of several modules (gems).
 
 As many Rails applications Spree requires a rational database to run. Spree supports both MySQL and PostgreSQL. You can also use SQLite.
@@ -46,14 +51,9 @@ These gems are the core of Spree and they are the most important part of the Spr
   </Accordion>
 </AccordionGroup>
 
-### Spree Starter
-
-Spree Starter is a starter kit that you can use to get started with Spree. It provides a ready-to-go setup for a Spree store, with all the necessary configuration and structure. It's a great way to get familiar with Spree and start building your own store.
-
-If you followed the installation guide, you should have a Spree Starter store ready to go. If you want to learn more about Spree Starter, you can find more information in the [Spree Starter README](https://github.com/spree/spree_starter).
-
-### Extensions
+### 3rd party Extensions
 
 Extensions are Spree plugins that add new features or functionality to a Spree store. They are developed and maintained by the Spree community.
 
-You can find a list of Spree extensions in the [Spree Extensions](https://github.com/spree-contrib) Github organization.
+You can find a list of Spree extensions on the [Extensions list page](/extensions/extensions-list)
+
