--- a/docs/developer/core-concepts/promotions.mdx
+++ b/docs/developer/core-concepts/promotions.mdx
@@ -94,4 +94,4 @@ Rules are used by Spree to determine if a promotion is applicable to an order an
 
 ## Extending Promotions
 
-Please follow our [Promotions Customization guide](/customization/promotions) to learn how to create custom promotion rules and actions.
+Please follow our [extending Promotions guide](/developer/extending-spree/promotions) to learn how to create custom promotion rules and actions.
