--- a/docs/developer/core-concepts/architecture.mdx
+++ b/docs/developer/core-concepts/architecture.mdx
@@ -1,9 +1,9 @@
 ---
 title: Architecture
-description: Learn about the architecture of Spree
+description: Learn about the Spree architecture
 ---
 
-Spree is built on top of [Ruby on Rails](https://rubyonrails.org) and handful of other Ruby libraries. Spree itself is a modular platform consisting of several modules (gems).
+Spree is built on top of [Ruby on Rails framework](https://rubyonrails.org) and handful of other libraries. Spree itself is a modular platform consisting of several modules (Ruby gems).
 
 As many Rails applications Spree requires a rational database to run. Spree supports both MySQL and PostgreSQL. You can also use SQLite.
 
