--- a/docs/developer/core-concepts/orders.mdx
+++ b/docs/developer/core-concepts/orders.mdx
@@ -146,7 +146,7 @@ An order can link to two `Address` objects. The shipping address indicates where
 
 The billing address indicates where the user who's paying for the order is located. This can alter the tax rate for the order, which in turn can change how much the final order total can be.
 
-For more information about addresses, please read the [Addresses](addresses) guide.
+For more information about addresses, please read the [Addresses](/developer/core-concepts/addresses) guide.
 
 ## Adjustments
 
