--- a/docs/developer/core-concepts/stores.mdx
+++ b/docs/developer/core-concepts/stores.mdx
@@ -111,7 +111,7 @@ Each Store can be configured to ship to only selected countries. This is achieve
 
 Available Shipping Methods on the Checkout are determined based on the [Zone and Shipping Methods configuration](shipments).
 
-This will also have an effect on what [Shipping / Billing Addresses](addresses) user can add/ select during Checkout. Only Addresses from Countries or States available in the selected Zone can be used and will be visible in the User's Address Book.
+This will also have an effect on what [Shipping / Billing Addresses](/developer/core-concepts/addresses) user can add/ select during Checkout. Only Addresses from Countries or States available in the selected Zone can be used and will be visible in the User's Address Book.
 
 ## Store resources
 
