--- a/docs/developer/core-concepts/users.mdx
+++ b/docs/developer/core-concepts/users.mdx
@@ -9,7 +9,7 @@ In your Spree application you will usually have 2 types of users:
 
 Customers can have:
 
-* **[Addresses](addresses)**, both billing and shipping
+* **[Addresses](/developer/core-concepts/addresses)**, both billing and shipping
 * **[Orders](orders)** - a list of products that the user has purchased
 * **Credit Cards** - used on the checkout page to pay for the order
 * **Store Credits** - assigned by the store owners, to be used to purchase products
