--- a/docs/developer/customization/storefront.mdx
+++ b/docs/developer/customization/storefront.mdx
@@ -8,7 +8,7 @@ This section covers the Rails storefront which was extracted to [`spree_frontend
 
 Spree 4 under the hood uses [Bootstrap 4](https://getbootstrap.com/docs/4.6/getting-started/theming/) for easy theming with some additional Spree-specific [SASS variables](https://sass-lang.com/documentation/variables).
 
-<img src="/images/cms_navigation.png" alt="" data-size="line"> To make those changes live you need to update SCSS variable files located in your project at `app/assets/stylesheets/spree/frontend/variables/variables.scss`.
+To make those changes live you need to update SCSS variable files located in your project at `app/assets/stylesheets/spree/frontend/variables/variables.scss`.
 
 ### Header
 
