--- a/docs/developer/customization/quickstart.mdx
+++ b/docs/developer/customization/quickstart.mdx
@@ -1,9 +1,9 @@
 ---
 title: Quickstart
-description: Learn how to customize every part of Spree stack
+description: Learn how to customize every part of the Spree stack
 ---
 
-Spree is a very flexible platform allowing you to customize every part of it, to suit your business needs. 
+Spree is a very flexible platform allowing you to customize every part of it, to suit your business needs.
 
 There are several ways you can achieve this:
 
@@ -11,6 +11,11 @@ There are several ways you can achieve this:
   <Accordion title="Admin Panel">
     There's a lot of Store settings you can change in the admin panel.
 
+    Changing currency, shipping zones, languages - it's very easy to do.
+
+    Go to `Admin > Configuration > General Settings`
+
+    <img src="/images/spree_admin_store_settings.png" alt="Spree Admin Store Settings" />
   </Accordion>
 
   <Accordion title="Configuration">
