--- a/docs/developer/upgrades/upgrades/4.6-to-4.7.mdx
+++ b/docs/developer/upgrades/upgrades/4.6-to-4.7.mdx
@@ -6,7 +6,7 @@ description: This guide covers upgrading a 4.6 Spree application to Spree 4.7.
 
 **If you're on an older version than 4.6 please follow previous upgrade guides and perform those upgrades incrementally, e.g.**
 
-1. [upgrade 4.3 to 4.4](https://dev-docs.spreecommerce.org/upgrades/upgrades/4.3-to-4.4)
+1. [upgrade 4.3 to 4.4](https://docs.spreecommerce.org/developer/upgrades/upgrades/4.3-to-4.4)
 2. [upgrade 4.4 to 4.5](4.4-to-4.5)
 3. [upgrade 4.5 to 4.6](4.5-to-4.6)
 
