--- a/docs/developer/upgrades/upgrades/four-dot-one-to-four-dot-two.mdx
+++ b/docs/developer/upgrades/upgrades/four-dot-one-to-four-dot-two.mdx
@@ -11,8 +11,8 @@ If you have any questions or suggestions feel free to reach out through [Spree s
 
 **If you're on an older version than 4.1 please follow previous upgrade guides and perform those upgrades incrementally**, eg.
 
-1. [upgrade 3.7 to 4.0](https://dev-docs.spreecommerce.org/upgrades/upgrades/three-dot-seven-to-four-dot-oh)
-2. [upgrade 4.0 to 4.1](https://dev-docs.spreecommerce.org/upgrades/upgrades/four-dot-oh-to-four-dot-one)
+1. [upgrade 3.7 to 4.0](https://docs.spreecommerce.org/developer/upgrades/upgrades/three-dot-seven-to-four-dot-oh)
+2. [upgrade 4.0 to 4.1](https://docs.spreecommerce.org/developer/upgrades/upgrades/four-dot-oh-to-four-dot-one)
 
 This is the safest and recommended method.
 
