--- a/docs/developer/upgrades/upgrades/4.5-to-4.6.mdx
+++ b/docs/developer/upgrades/upgrades/4.5-to-4.6.mdx
@@ -7,7 +7,7 @@ description: This guide covers upgrading a 4.5 Spree application to Spree 4.6.
 **If you're on an older version than 4.5 please follow previous upgrade guides and perform those upgrades incrementally, e.g.**
 
 1. [upgrade 4.2 to 4.3](fout-dot-two-to-four-dot-three)
-2. [upgrade 4.3 to 4.4](https://dev-docs.spreecommerce.org/upgrades/upgrades/4.3-to-4.4)
+2. [upgrade 4.3 to 4.4](https://docs.spreecommerce.org/developer/upgrades/upgrades/4.3-to-4.4)
 3. [upgrade 4.4 to 4.5](4.4-to-4.5)
 
 This is the safest and recommended method.
