--- a/docs/developer/upgrades/upgrades/four-dot-oh-to-four-dot-one.mdx
+++ b/docs/developer/upgrades/upgrades/four-dot-oh-to-four-dot-one.mdx
@@ -11,11 +11,11 @@ If you have any questions or suggestions feel free to reach out through [Spree s
 
 **If you're on an older version than 4.0 please follow previous upgrade guides and perform those upgrades incrementally**, eg.
 
-1. [upgrade 3.3 to 3.4](https://dev-docs.spreecommerce.org/upgrades/upgrades/three-dot-three-to-three-dot-four)
-2. [upgrade 3.4 to 3.5](https://dev-docs.spreecommerce.org/upgrades/upgrades/three-dot-four-to-three-dot-five)
-3. [upgrade 3.5 to 3.6](https://dev-docs.spreecommerce.org/upgrades/upgrades/three-dot-five-to-three-dot-six)
-4. [upgrade 3.6 to 3.7](https://dev-docs.spreecommerce.org/upgrades/upgrades/three-dot-six-to-three-dot-seven)
-5. [upgrade 3.7 to 4.0](https://dev-docs.spreecommerce.org/upgrades/upgrades/three-dot-seven-to-four-dot-oh)
+1. [upgrade 3.3 to 3.4](https://docs.spreecommerce.org/developer/upgrades/upgrades/three-dot-three-to-three-dot-four)
+2. [upgrade 3.4 to 3.5](https://docs.spreecommerce.org/developer/upgrades/upgrades/three-dot-four-to-three-dot-five)
+3. [upgrade 3.5 to 3.6](https://docs.spreecommerce.org/developer/upgrades/upgrades/three-dot-five-to-three-dot-six)
+4. [upgrade 3.6 to 3.7](https://docs.spreecommerce.org/developer/upgrades/upgrades/three-dot-six-to-three-dot-seven)
+5. [upgrade 3.7 to 4.0](https://docs.spreecommerce.org/developer/upgrades/upgrades/three-dot-seven-to-four-dot-oh)
 
 This is the safest and recommended method.
 
